--- a/.env
+++ b/.env
@@ -7,13 +7,13 @@ VUE_APP_BACKEND_RELEASE = "https://github.com/tindy2013/subconverter/releases"
 VUE_APP_SUBCONVERTER_REMOTE_CONFIG = "https://github.com/ACL4SSR/ACL4SSR/blob/master/Clash/config/ACL4SSR_Online.ini"
 
 # API 后端
-VUE_APP_SUBCONVERTER_DEFAULT_BACKEND = "http://2any.astralcyber.top"
+VUE_APP_SUBCONVERTER_DEFAULT_BACKEND = "https://2any.asgardion.space"
 
 # 短链接后端
 VUE_APP_MYURLS_DEFAULT_BACKEND = "https://suo.yt"
 
 # 文本托管后端
-VUE_APP_CONFIG_UPLOAD_BACKEND = "https://2any.astralcyber.top"
+VUE_APP_CONFIG_UPLOAD_BACKEND = "https://2any.asgardion.space"
 
 # 页面配置
 VUE_APP_USE_STORAGE = true 
